examples/bad/ERROR_UNDEFINED_VARIABLE/undefined_var_in_other_fun.st
language core;

fn foo(a : Nat) -> Nat {
    return 0
}

fn main(n : Nat) -> Nat {
    return a
}

//ERROR_UNDEFINED_VARIABLE
